More ErrorProne improvements